--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -91,6 +91,18 @@ override_dh_install:
 	[ $(HAVE_EBPF) -eq 1 ] && mv -f $(TEMPTOP)/usr/lib/netdata/conf.d/ebpf.d \
 	$(TOP)-plugin-ebpf/usr/lib/netdata/conf.d/ebpf.d
 
+	# Add python plugin install rules
+	mkdir -p $(TOP)-plugin-pythond/usr/libexec/netdata/plugins.d/
+	mkdir -p $(TOP)-plugin-pythond/usr/lib/netdata/conf.d/
+	mv -f $(TEMPTOP)/usr/libexec/netdata/plugins.d/python.d.plugin \
+	$(TOP)-plugin-pythond/usr/libexec/netdata/plugins.d/python.d.plugin
+	mv -f $(TEMPTOP)/usr/libexec/netdata/python.d \
+	$(TOP)-plugin-pythond/usr/libexec/netdata/python.d
+	mv -f $(TEMPTOP)/usr/lib/netdata/conf.d/python.d.conf \
+	$(TOP)-plugin-pythond/usr/lib/netdata/conf.d/python.d.conf
+	mv -f $(TEMPTOP)/usr/lib/netdata/conf.d/python.d \
+	$(TOP)-plugin-pythond/usr/lib/netdata/conf.d/python.d
+
 	# Set the rest of the software in the main package
 	#
 	cp -rp $(TEMPTOP)/usr $(TOP)
