Split go.d plugin to it’s own package.
The go.d plugin will still be installed by default in most cases when
installing the Netdata Agent

--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -43,7 +43,8 @@ Conflicts: netdata-core,
            netdata-plugins-python,
            netdata-web
 Recommends: netdata-plugin-ebpf,
-            netdata-plugin-pythond
+            netdata-plugin-pythond,
+            netdata-plugin-go
 Pre-Depends: dpkg (>= 1.17.14)
 Description: real-time charts for system monitoring
  Netdata is a daemon that collects data in realtime (per second)
@@ -104,3 +105,13 @@ Description: The python.d metrics collection plugin for the Netdata Agent
  Many of the collectors provided by this package are also available
  in netdata-plugin-god. In msot cases, you probably want to use those
  versions instead of the Python versions.
+
+Package: netdata-plugin-go
+Architecture: any
+Depends: ${shlibs:Depends},
+         netdata (>= ${source:Version})
+Description: The go.d metrics collection plugin for the Netdata Agent
+ This plugin adds a selection of additional collectors written in Go to
+ the Netdata Agent A significant percentage of the application specific
+ collectors provided by Netdata are part of this plugin, so most users
+ will want it installed.
