--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -130,9 +130,13 @@ override_dh_install:
 	[ $(HAVE_EBPF) -eq 1 ] && mkdir -p $(TOP)-plugin-ebpf-code/usr/libexec/netdata/plugins.d/
 	[ $(HAVE_EBPF) -eq 1 ] && packaging/bundle-ebpf.sh . ${TOP}-plugin-ebpf-code/usr/libexec/netdata/plugins.d/
 
-	# Install go
+	# Install go to it's own package directory
 	#
-	debian/install_go.sh $$(cat ${CURDIR}/packaging/go.d.version) $(TOP)/usr/lib/netdata $(TOP)/usr/libexec/netdata
+	mkdir -p $(TOP)-plugin-go/usr/lib/netdata/conf.d
+	mkdir -p $(TOP)-plugin-go/usr/libexec/netdata/plugins.d
+	debian/install_go.sh $$(cat ${CURDIR}/packaging/go.d.version) \
+	$(TOP)-plugin-go/usr/lib/netdata \
+	$(TOP)-plugin-go/usr/libexec/netdata
 
 override_dh_installdocs:
 	dh_installdocs
@@ -160,7 +164,9 @@ override_dh_fixperms:
 	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/debugfs.plugin
 	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/perf.plugin
 	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/slabinfo.plugin
-	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/go.d.plugin
+
+	# Go plugin package
+	chmod 0750 $(TOP)-plugin-go/usr/libexec/netdata/plugins.d/go.d.plugin
 
 	# CUPS plugin package
 	chmod 0750 $(TOP)-plugin-cups/usr/libexec/netdata/plugins.d/cups.plugin
