--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -103,6 +103,14 @@ override_dh_install:
 	mv -f $(TEMPTOP)/usr/lib/netdata/conf.d/python.d \
 	$(TOP)-plugin-pythond/usr/lib/netdata/conf.d/python.d
 
+	# Add apps plugin install rules
+	mkdir -p $(TOP)-plugin-apps/usr/libexec/netdata/plugins.d/
+	mkdir -p $(TOP)-plugin-apps/usr/lib/netdata/conf.d/
+	mv -f $(TEMPTOP)/usr/libexec/netdata/plugins.d/apps.plugin \
+	$(TOP)-plugin-apps/usr/libexec/netdata/plugins.d/apps.plugin
+	mv -f $(TEMPTOP)/usr/lib/netdata/conf.d/apps_groups.conf \
+	$(TOP)-plugin-apps/usr/lib/netdata/conf.d/apps_groups.conf
+
 	# Set the rest of the software in the main package
 	#
 	cp -rp $(TEMPTOP)/usr $(TOP)
@@ -157,13 +165,16 @@ override_dh_fixperms:
 	#
 	chmod 0755 $(TOP)/usr/libexec/netdata/netdata-updater.sh
 
+	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/perf.plugin
+	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/slabinfo.plugin
+
+	# debugfs plugin
+	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/debugfs.plugin
+
 	# apps.plugin should only be runnable by the netdata user. It will be
 	# given extra capabilities in the postinst script.
 	#
-	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/apps.plugin
-	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/debugfs.plugin
-	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/perf.plugin
-	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/slabinfo.plugin
+	chmod 0750 $(TOP)-plugin-apps/usr/libexec/netdata/plugins.d/apps.plugin
 
 	# Go plugin package
 	chmod 0750 $(TOP)-plugin-go/usr/libexec/netdata/plugins.d/go.d.plugin
