--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -111,6 +111,11 @@ override_dh_install:
 	mv -f $(TEMPTOP)/usr/lib/netdata/conf.d/apps_groups.conf \
 	$(TOP)-plugin-apps/usr/lib/netdata/conf.d/apps_groups.conf
 
+	# Add slabinfo plugin install rules
+	mkdir -p $(TOP)-plugin-slabinfo/usr/libexec/netdata/plugins.d/
+	mv -f $(TEMPTOP)/usr/libexec/netdata/plugins.d/slabinfo.plugin \
+	$(TOP)-plugin-slabinfo/usr/libexec/netdata/plugins.d/slabinfo.plugin
+
 	# Set the rest of the software in the main package
 	#
 	cp -rp $(TEMPTOP)/usr $(TOP)
@@ -166,7 +171,6 @@ override_dh_fixperms:
 	chmod 0755 $(TOP)/usr/libexec/netdata/netdata-updater.sh
 
 	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/perf.plugin
-	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/slabinfo.plugin
 
 	# debugfs plugin
 	chmod 0750 $(TOP)/usr/libexec/netdata/plugins.d/debugfs.plugin
@@ -175,6 +179,9 @@ override_dh_fixperms:
 	# given extra capabilities in the postinst script.
 	#
 	chmod 0750 $(TOP)-plugin-apps/usr/libexec/netdata/plugins.d/apps.plugin
+
+	# slabinfo package
+	chmod 0750 $(TOP)-plugin-slabinfo/usr/libexec/netdata/plugins.d/slabinfo.plugin
 
 	# Go plugin package
 	chmod 0750 $(TOP)-plugin-go/usr/libexec/netdata/plugins.d/go.d.plugin
@@ -185,7 +192,7 @@ override_dh_fixperms:
 	# freeIPMI plugin package
 	chmod 4750 $(TOP)-plugin-freeipmi/usr/libexec/netdata/plugins.d/freeipmi.plugin
 
-	# freeIPMI plugin package
+	# NFACCT plugin package
 	chmod 4750 $(TOP)-plugin-nfacct/usr/libexec/netdata/plugins.d/nfacct.plugin
 
 override_dh_installlogrotate:
