--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
                       --with-math \
                       --with-user=netdata
           make dist
-          echo "::set-output name=distfile::$(find . -name 'netdata-*.tar.gz')"
+          echo "distfile=$(find . -name 'netdata-*.tar.gz')" >> "${GITHUB_OUTPUT}"
           cp netdata-*.tar.gz artifacts/
       - name: Store
         id: store
@@ -186,6 +186,7 @@ jobs:
         shell: python3 {0}
         run: |
           from ruamel.yaml import YAML
+          import os
           import json
           yaml = YAML(typ='safe')
           entries = list()
@@ -215,7 +216,8 @@ jobs:
           entries.sort(key=lambda k: k['distro'])
           matrix = json.dumps({'include': entries}, sort_keys=True)
           print('Generated Matrix: ' + matrix)
-          print('::set-output name=matrix::' + matrix)
+          with open(os.env['GITHUB_ENV'], 'a') as f:
+              f.write('matrix=' + matrix)
       - name: Failure Notification
         uses: rtCamp/action-slack-notify@v2
         env:
@@ -363,7 +365,7 @@ jobs:
         id: load
         run: |
           docker load --input image.tar | tee image-info.txt
-          echo "::set-output name=image::$(cut -d ':' -f 3 image-info.txt)"
+          echo "image=$(cut -d ':' -f 3 image-info.txt)" >> "${GITHUB_OUTPUT}"
       - name: Regular build on ${{ matrix.distro }}
         id: build-basic
         run: |
@@ -458,7 +460,7 @@ jobs:
         id: load
         run: |
           docker load --input image.tar | tee image-info.txt
-          echo "::set-output name=image::$(cut -d ':' -f 3 image-info.txt)"
+          echo "image=$(cut -d ':' -f 3 image-info.txt)" >> "${GITHUB_OUTPUT}"
       - name: Install netdata and run the updater on ${{ matrix.distro }}
         id: updater-check
         run: |
@@ -790,9 +792,9 @@ jobs:
         id: tag
         run: |
           if echo ${{ github.event.inputs.version }} | grep -qE '^[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+$'; then
-            echo "::set-output name=tag::v${{ github.event.inputs.version }}"
+            echo "tag=v${{ github.event.inputs.version }}" >> "${GITHUB_OUTPUT}"
           else
-            echo "::set-output name=tag::${{ github.event.inputs.version }}"
+            echo "tag=${{ github.event.inputs.version }}" >> "${GITHUB_OUTPUT}"
           fi
 
   upload-release: # Create the draft release and upload the build artifacts.
